# bebone_docker

./: Dockerfile  README.md  build.sh
.github/workflows/: publish_docker_image.yml
app/: CMakeLists.txt
app/src/: CMakeLists.txt
src/: main.cpp
